server returns a success flag

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 	<form id="main">
 		<label>
 			URL Template:
-			<input type="text" id="template" name="template">
+			<input type="text" id="template" name="template" required>
 		</label>
 		<label>
 			Index Pattern:
-			<input type="text" id="pattern" name="pattern">
+			<input type="text" id="pattern" name="pattern" required>
 		</label>
 		<label>
 			Just the links?
